[package]
name = "songsaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0.1"
futures-util = "0.3.28"
indicatif = { version = "0.17.7", features = ["tokio"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["rustls", "json", "stream"] }
serde = { version = "1.0.189", features = ["derive"] }
tabled = { version = "0.14.0", features = ["color"] }
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
